# diligent-hours

./: .gitignore  LICENSE  README.md
.github/workflows/: release.yml
docs/: BUILD.md  SPEC.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hook.rs  lib.rs  main.rs  session.rs  tray.rs
ui/: index.html  main.js  settings.html  settings.js  style.css
